# DuckGame-Remake

./: .swp  CMakeLists.txt  Makefile  README.md  instalador.sh  run_client.sh  run_server.sh  run_tests.sh  run_valgrind_client.sh  run_valgrind_server.sh
armas/: CMakeLists.txt  ak47.h  arma.cpp  arma.h  cowboy_pistol.cpp  duel_pistol.h  granada.cpp  granada.h  p_p_laser.h  shotgun.cpp  sniper.h
client/: CMakeLists.txt  client_controlador.cpp  client_controlador.h  client_dibujador 2.cpp  client_dibujador.cpp  client_dibujador.h  client_enviador.cpp  client_enviador.h  client_handler 2.cpp  client_handler.cpp  client_handler.h  client_mock.cpp  client_mock.h  client_parseador 2.h  client_parseador.cpp  client_parseador.h  client_recibidor.cpp  client_recibidor.h  main.cpp  protocolo_cliente.cpp  protocolo_cliente.h
common/: CMakeLists.txt  comando.h  estado_fisico.h  estado_juego.h  orientacion.h  posicion.h  queue.h  socket.cpp  socket.h
data/: mapa_1.txt  mapa_2.txt
editor/: main.cpp
server/: CMakeLists.txt  aceptador.cpp  aceptador.h  ak47.cpp  ak47.h  arma.cpp  arma.h  banana.cpp  banana.h  comando.h  cowboy_pistol 2.cpp  cowboy_pistol.cpp  cowboy_pistol.h  duel_pistol 2.cpp  duel_pistol.cpp  duel_pistol.h  enviador.cpp  enviador.h  estado_fisico.h  estado_juego.h  gameloop.cpp  gameloop.h  granada.cpp  granada.h  laser_rifle 2.cpp  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  main.cpp  mapa.cpp  mapa.h  monitor.cpp  monitor.h  municion.cpp  municion.h  orientacion.h  p_p_laser 2.cpp  p_p_laser.cpp  p_p_laser.h  (+18 more)
server/armas/: arma.h  banana.h
(+170 files in other folders)
